--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "filestack-react": "^2.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-rangeslider": "^2.2.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
